Перенос ошибочно заведенных настроек памяти в раздел "Системы".